Add the links to the various pages

--- a/resort.html
+++ b/resort.html
@@ -6,5 +6,11 @@
     <body>
         <h1>WELCOME TO THE LEISURE RESORT</h1>
         <p>Here you can find <a href="accomodations.html">accomodations</a></p>
+
+        <p>Here you can find <a href="contact_info.html">Contact Information</a></p>
+
+        <p>Here you can find <a href="pictures.html">pictures</a></p>
+
+        <p>Here you can find <a href="travel.html">travel arrangements</a></p>
     </body>
 </html>
