Add information about the resort to the site

--- a/resort.html
+++ b/resort.html
@@ -5,6 +5,18 @@
     </head>
     <body>
         <h1>WELCOME TO THE LEISURE RESORT</h1>
+        <h2>Where all trips matter</h2>
+
+        <h3>HELLO THERE:</h3>
+        <p>We are known as the LEISURE RESORT CLUB. We grant people the one wish of being able to visit any destinantion of their desire.</p>
+
+        <p>We are currently operation in three countries:</p>
+        <ul>
+            <li>Kenya</li>
+            <li>Uganda</li>
+            <li>Tanzania</li>
+        </ul>
+
         <p>Here you can find <a href="accomodations.html">accomodations</a></p>
 
         <p>Here you can find <a href="contact_info.html">Contact Information</a></p>
