Add the information

--- a/resort.html
+++ b/resort.html
@@ -10,18 +10,29 @@
         <h3>HELLO THERE:</h3>
         <p>We are known as the LEISURE RESORT CLUB. We grant people the one wish of being able to visit any destinantion of their desire.</p>
 
-        <p>We are currently operation in three countries:</p>
+        <p>We are currently have branches in operation in three countries:</p>
         <ul>
             <li>Kenya</li>
             <li>Uganda</li>
             <li>Tanzania</li>
         </ul>
 
+        <p>We offer trips to :</p>
+        <ul>
+            <li>Mombasa</li>
+            <li>Zanzibar</li>
+            <li>Kampala</li>
+            <li>Seychelles</li>
+            <li>And Maldives</li>
+        </ul>
+
+        <p>Here you can find <a href="pictures.html">pictures</a> of the various destinations</p>
+
         <p>Here you can find <a href="accomodations.html">accomodations</a></p>
 
         <p>Here you can find <a href="contact_info.html">Contact Information</a></p>
 
-        <p>Here you can find <a href="pictures.html">pictures</a></p>
+        
 
         <p>Here you can find <a href="travel.html">travel arrangements</a></p>
     </body>
