Add information and put the links in their relevant positions

--- a/resort.html
+++ b/resort.html
@@ -28,12 +28,12 @@
 
         <p>Here you can find <a href="pictures.html">pictures</a> of the various destinations</p>
 
-        <p>Here you can find <a href="accomodations.html">accomodations</a></p>
+        <p>We facilitate easy and reliable booking of trips and hotel destinations.</p>
+        <p>Here you can find <a href="accomodations.html">accomodations</a> available and also make travel arrangements here<a href="travel.html">book trip</a></p>
 
-        <p>Here you can find <a href="contact_info.html">Contact Information</a></p>
 
+        <p>Please feel free to contact us <a href="contact_info.html">here</a></p>
         
 
-        <p>Here you can find <a href="travel.html">travel arrangements</a></p>
     </body>
 </html>
