--- a/resort.html
+++ b/resort.html
@@ -10,7 +10,7 @@
         <h3>HELLO THERE:</h3>
         <p>We are known as the LEISURE RESORT CLUB. We grant people the one wish of being able to visit any destinantion of their desire.</p>
 
-        <p>We are currently have branches in operation in three countries:</p>
+        <p>We currently have branches in operation in three countries:</p>
         <ul>
             <li>Kenya</li>
             <li>Uganda</li>
@@ -29,7 +29,7 @@
         <p>Here you can find <a href="pictures.html">pictures</a> of the various destinations</p>
 
         <p>We facilitate easy and reliable booking of trips and hotel destinations.</p>
-        <p>Here you can find <a href="accomodations.html">accomodations</a> available and also make travel arrangements here<a href="travel.html">book trip</a></p>
+        <p>Here you can find <a href="accomodations.html">accomodations</a> available and also make travel arrangements; <a href="travel.html">book trip</a></p>
 
 
         <p>Please feel free to contact us <a href="contact_info.html">here</a></p>
