Add the css link to the main webpage

--- a/resort.html
+++ b/resort.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="css/resort.css" type="text/css">
         <title>LEISURE RESORT</title>
     </head>
     <body>
