Add to the page

--- a/travel.html
+++ b/travel.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="travel.css" type="text/css">
         <title>TRAVEL</title>
     </head>
     <body>
