Add background color to the travel

--- a/travel.html
+++ b/travel.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="travel.css" type="text/css">
+        <link rel="stylesheet" href="css/travel.css" type="text/css">
         <title>TRAVEL</title>
     </head>
     <body>
-        
+        <p>git</p>
     </body>
 </html>
