Add context to the travel page

--- a/travel.html
+++ b/travel.html
@@ -5,6 +5,11 @@
         <title>TRAVEL</title>
     </head>
     <body>
-        <p>git</p>
+        <h1>Welcome to the booking page</h1>
+        <p>Please proceed to the appropriate website to book for your journey</p>
+        <ul>
+            <li>Kenya airways</li>
+            <li>SGR</li>
+        </ul>
     </body>
 </html>
