Add the pic folder and save images and use them on the webpage

--- a/pictures.html
+++ b/pictures.html
@@ -4,6 +4,12 @@
         <title>PICTURES</title>
     </head>
     <body>
-        
+        <h1>Here are some of the destinations we facilitate travel to.</h1>
+        <ul>
+            <li><img src="pic/Konoha.jpeg" alt="Konoha"></li>
+            <li><img src="pic/konohagure.jpeg" alt="konohagure"></li>
+            <li><img src="pic/zanzibar.jpeg" alt="Zanzibar"></li>
+        </ul>
+
     </body>
 </html>
