Add the contact informations

--- a/contact_info.html
+++ b/contact_info.html
@@ -4,6 +4,13 @@
         <title>CONTACT</title>
     </head>
     <body>
-        
+        <p>Please feel free to reach us on either of the following :
+        </p>
+        <ul>
+            <li>Email : resort@gmail.com </li>
+            <li>Phone : 0710101010</li>
+            <li>Instagram : @resort</li>
+            <li>Facebook : @Resort</li>
+        </ul>
     </body>
 </html>
