Add the accomodation images

--- a/accomodations.html
+++ b/accomodations.html
@@ -4,6 +4,10 @@
         <title>ACCOMODATIONS</title>
     </head>
     <body>
-        
+        <h1>Some of the hotels you may be able to book through us.</h1>
+        <ul>
+            <li><img src="pic/hotel1.jpeg" alt=""></li>
+            <li><img src="pic/hotel2.jpeg" alt=""></li>
+        </ul>
     </body>
 </html>
