--- a/resort.html
+++ b/resort.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>WELCOME TO THE LEISURE RESORT</h1>
-        <h2>Where all trips matter</h2>
+        <!-- <h2>Where all trips matter</h2> -->
 
         <h3>HELLO THERE:</h3>
         <p>We are known as the LEISURE RESORT CLUB. We grant people the one wish of being able to visit any destinantion of their desire.</p>
