Add style to the page

--- a/resort.html
+++ b/resort.html
@@ -9,7 +9,7 @@
         <!-- <h2>Where all trips matter</h2> -->
 
         <h3>HELLO THERE:</h3>
-        <p>We are known as the LEISURE RESORT CLUB. We grant people the one wish of being able to visit any destinantion of their desire.</p>
+        <p>We are known as the LEISURE RESORT CLUB. We grant people the one wish of being able to visit any destinantion of their <strong>desire</strong>.</p>
 
         <p>We currently have branches in operation in three countries:</p>
         <ul>
