Add the css link and center the h1 headers

--- a/pictures.html
+++ b/pictures.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="css/pictures.css" type="text/css">
         <title>PICTURES</title>
     </head>
     <body>
