--- a/contact_info.html
+++ b/contact_info.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="css/contact.css" type="text/css">
         <title>CONTACT</title>
     </head>
     <body>
