Add the css link and style the accomodations page

--- a/accomodations.html
+++ b/accomodations.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="css/accomodations.css" type="text/css">
         <title>ACCOMODATIONS</title>
     </head>
     <body>
